finished nav, hero, services

--- a/index.html
+++ b/index.html
@@ -4,8 +4,106 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Ansor Med</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <!-- Nav boshlandi -->
+
+    <nav>
+      <div class="logo">
+        <img src="./assets/images/logo-icon.svg" alt="Logo" />
+        <span class="logo_text text_black">AnsorMed</span>
+      </div>
+      <ul>
+        <li><a href="#"> Xizmatlar</a></li>
+        <li><a href="#"> Dorilar</a></li>
+        <li><a href="#"> Asal</a></li>
+        <li><a href="#"> Kontakt</a></li>
+        <li><a href="#"> Blog</a></li>
+      </ul>
+      <button class="btn_red">Qabulga yozilish</button>
+    </nav>
+
+    <!-- Nav tugadi -->
+
+    <main>
+      <!-- Hero boshlandi -->
+
+      <section class="hero">
+        <div class="left">
+          <h1 class="title text_white">
+            Tabiiy davolash usullari yordamida kasalliklardan xalos bo’ling.
+          </h1>
+          <p class="text_white">
+            Hijoma, manual terapiya, zuluk va turli tabiiy giyohlar eng ko’p
+            uchraydigan kasalliklarni yengishda yordam beradi. Sog’ligingizni
+            o’z ishining professionallariga ishonib topshiring.
+          </p>
+          <button class="btn_red">Qabulga yozilish</button>
+        </div>
+        <div class="right">
+          <img src="./assets/images/hero-img.svg" alt="Hero Image" />
+        </div>
+      </section>
+
+      <!-- Hero tugadi -->
+
+      <!-- Services boshlandi -->
+
+      <section class="services">
+        <h2 class="title text_black">Xizmatlar</h2>
+        <div class="service">
+          <div class="service_img">
+            <img src="./assets/images/image 1.svg" alt="Service Image" />
+          </div>
+          <div class="service_text">
+            <h3 class="text_black">Hijoma</h3>
+            <p>
+              Imom Termiziy Abdulloh ibn Abbos raziyallohu anhumodan rivoyat qilgan hadisda rasululloh sallallohu alayhi va sallam dedilar: «Sizlar hijoma qiladigan kunlaringizning eng yaxshisi 17, 19 va 21-kunlardir» (bu kunlar hijrij-kamariy hisobdagi oylar kunlaridir).
+            </p>
+          </div>
+        </div>
+        <div class="service">
+          <div class="service_img">
+            <img src="./assets/images/image 2.svg" alt="Service Image" />
+          </div>
+          <div class="service_text">
+            <h3 class="text_black">Hijoma</h3>
+            <p>
+              Hijoma, manual terapiya, zuluk va turli tabiiy giyohlar eng ko’p
+              uchraydigan kasalliklarni yengishda yordam beradi. Sog’ligingizni
+              o’z ishining professionallariga ishonib topshiring.
+            </p>
+          </div>
+        </div>
+        <div class="service">
+          <div class="service_img">
+            <img src="./assets/images/image 3.svg" alt="Service Image" />
+          </div>
+          <div class="service_text">
+            <h3 class="text_black">Hijoma</h3>
+            <p>
+              Imom Termiziy Abdulloh ibn Abbos raziyallohu anhumodan rivoyat qilgan hadisda rasululloh sallallohu alayhi va sallam dedilar: «Sizlar hijoma qiladigan kunlaringizning eng yaxshisi 17, 19 va 21-kunlardir» (bu kunlar hijrij-kamariy hisobdagi oylar kunlaridir).
+            </p>
+          </div>
+        </div>
+        <button class="btn_red">Qabulga yozilish</button>
+      </section>
+
+      <!-- Services tugadi -->
+
+      <!-- Contact boshlandi -->
+
+      <section class="contact"></section>
+
+      <!-- Contact tugadi -->
+    </main>
+
+    <!-- Footer boshlandi -->
+
+    <footer></footer>
+
+    <!-- Footer tugadi -->
+  </body>
 </html>
