finished nav, hero, services, footer

--- a/index.html
+++ b/index.html
@@ -60,7 +60,11 @@
           <div class="service_text">
             <h3 class="text_black">Hijoma</h3>
             <p>
-              Imom Termiziy Abdulloh ibn Abbos raziyallohu anhumodan rivoyat qilgan hadisda rasululloh sallallohu alayhi va sallam dedilar: «Sizlar hijoma qiladigan kunlaringizning eng yaxshisi 17, 19 va 21-kunlardir» (bu kunlar hijrij-kamariy hisobdagi oylar kunlaridir).
+              Imom Termiziy Abdulloh ibn Abbos raziyallohu anhumodan rivoyat
+              qilgan hadisda rasululloh sallallohu alayhi va sallam dedilar:
+              «Sizlar hijoma qiladigan kunlaringizning eng yaxshisi 17, 19 va
+              21-kunlardir» (bu kunlar hijrij-kamariy hisobdagi oylar
+              kunlaridir).
             </p>
           </div>
         </div>
@@ -84,7 +88,11 @@
           <div class="service_text">
             <h3 class="text_black">Hijoma</h3>
             <p>
-              Imom Termiziy Abdulloh ibn Abbos raziyallohu anhumodan rivoyat qilgan hadisda rasululloh sallallohu alayhi va sallam dedilar: «Sizlar hijoma qiladigan kunlaringizning eng yaxshisi 17, 19 va 21-kunlardir» (bu kunlar hijrij-kamariy hisobdagi oylar kunlaridir).
+              Imom Termiziy Abdulloh ibn Abbos raziyallohu anhumodan rivoyat
+              qilgan hadisda rasululloh sallallohu alayhi va sallam dedilar:
+              «Sizlar hijoma qiladigan kunlaringizning eng yaxshisi 17, 19 va
+              21-kunlardir» (bu kunlar hijrij-kamariy hisobdagi oylar
+              kunlaridir).
             </p>
           </div>
         </div>
@@ -95,14 +103,29 @@
 
       <!-- Contact boshlandi -->
 
-      <section class="contact"></section>
-
+      <section class="contact">
+        <h2 class="title text_white">Qabulga ro'yxatdan o'ting</h2>
+        <button class="btn_transparent">Qo'ng'iroq qilish</button>
+        <button class="btn_transparent">Telegramdan yozish</button>
+      </section>
       <!-- Contact tugadi -->
     </main>
 
     <!-- Footer boshlandi -->
 
-    <footer></footer>
+    <footer>
+      <div class="logo">
+        <img src="./assets/images/logo-icon.svg" alt="Logo" />
+        <span class="logo_text text_white">AnsorMed</span>
+      </div>
+      <ul>
+        <li><a href="#"> Xizmatlar</a></li>
+        <li><a href="#"> Dorilar</a></li>
+        <li><a href="#"> Asal</a></li>
+        <li><a href="#"> Kontakt</a></li>
+        <li><a href="#"> Blog</a></li>
+      </ul>
+    </footer>
 
     <!-- Footer tugadi -->
   </body>
