--- a/index.html
+++ b/index.html
@@ -105,8 +105,10 @@
 
       <section class="contact">
         <h2 class="title text_white">Qabulga ro'yxatdan o'ting</h2>
-        <button class="btn_transparent">Qo'ng'iroq qilish</button>
-        <button class="btn_transparent">Telegramdan yozish</button>
+        <div class="button">
+          <button class="btn_transparent">Qo'ng'iroq qilish</button>
+          <button class="btn_transparent">Telegramdan yozish</button>
+        </div>
       </section>
       <!-- Contact tugadi -->
     </main>
